<resources>
    <string name="app_name">BookToGo</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="select_gender">Select Gender</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="total_adults">Total Adults</string>
    <string name="total_children">Total Children</string>
    <string name="book">Book</string>
    <string name="user">User</string>
    <string name="guests">Guests</string>
    <string name="adults">Adults</string>
    <string name="children">Children</string>
    <string name="days">Days</string>
    <string name="see_hotel_details">See hotel <br />details</string>
    <string name="map_key" translatable="false">AIzaSyA1hV1qrPXdZMHp_6WAa3kHPQKdXLjHBlE</string>
    <string name="view_location">View Location</string>
    <string name="choose_this_hotel">Choose This Room</string>
    <string name="free_wifi">Free Wifi</string>
    <string name="clean_room">Clean Room</string>
    <string name="elevator">Elevator</string>
    <string name="family_room">Family Room</string>
    <string name="wifi_free">Wifi Free</string>
    <string name="hot_tub">Hot Tub</string>
    <string name="laundry">Laundry</string>
    <string name="reception">Reception</string>
    <string name="security_camera">Security Camera</string>
    <string name="smoke">Smoke</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="booking_this_room">Booking This Room</string>
    <string name="at_least_one_day">Please Book At Least One Day</string>
    <string name="select_a_reservation">Please Select A Reservation Date</string>
    <string name="user_information">User Information</string>
    <string name="history">History</string>
    <string name="support">Support</string>
    <string name="log_out">Log Out</string>
    <string name="information">Information</string>
    <string name="full_name_info">Full Name :</string>
    <string name="user_name_info">User Name :</string>
    <string name="email_info">Email :</string>
    <string name="phone_info">Phone :</string>
    <string name="gender_info">Gender :</string>
    <string name="age_info">Age :</string>
    <string name="password_info">Password :</string>
    <string name="old_password">Old Password :</string>
    <string name="new_password">New Password :</string>
    <string name="confirm_password">Confirm Password :</string>
    <string name="change_password">Change Password</string>
    <string name="please_enter_enough_data">Please enter enough data</string>
    <string name="new_password_not_match">New password not match</string>
    <string name="old_password_not_true">Old password not true</string>
    <string name="change_password_complete">Change password complete</string>
    <string name="booking_history">Booking History</string>
    <string name="double_click_back">Please click BACK again to exit</string>
    <string name="enter_the_phone_number_nfor_otp_authentication">Enter the phone number \nfor OTP authentication</string>
    <string name="promotion_code">Promotion Code</string>
    <string name="if_you_have_a_code">If you have a code</string>
    <string name="this_code_not_found">This Code Not Found</string>
    <string name="login">Login.....</string>
    <string name="log_out_message">Do you want to log out of your account ?</string>
</resources>