<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background_app"
    android:layout_height="match_parent"
    android:onClick="noClick"
    tools:context=".fragment.UserFragment"
    tools:ignore="OnClick">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            app:civ_border_color="#47E0D7"
            app:civ_border_width="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/male" />

        <TextView
            android:maxEms="13"
            android:fontFamily="@font/quicksand_regular"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#0AA8EF"
            android:id="@+id/tv_userName_info"
            android:layout_marginStart="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/img_avatar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_avatar"
            app:layout_constraintTop_toTopOf="@+id/img_avatar"
            tools:text="Xuân Trường DeepTry" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="#CCCCCC"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_avatar" />

        <ImageView
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:id="@+id/img_infomation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/information"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/tv_infomation"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#0AA8EF"
            android:layout_marginStart="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/user_information"
            app:layout_constraintBottom_toBottomOf="@+id/img_infomation"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_infomation"
            app:layout_constraintTop_toTopOf="@+id/img_infomation" />

        <ImageView
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:id="@+id/img_history_booking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/history"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_infomation" />

        <TextView
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#0AA8EF"
            android:layout_marginStart="16dp"
            android:layout_width="0dp"
            android:text="@string/history"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/img_history_booking"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_history_booking"
            app:layout_constraintTop_toTopOf="@+id/img_history_booking" />

        <ImageView
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:id="@+id/img_support"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/help"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_history_booking" />

        <TextView
            android:id="@+id/tv_support"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="#0AA8EF"
            android:layout_marginStart="16dp"
            android:text="@string/support"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/img_support"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_support"
            app:layout_constraintTop_toTopOf="@+id/img_support" />

        <androidx.appcompat.widget.AppCompatButton
            android:textAllCaps="false"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="82dp"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:fontFamily="@font/quicksand_regular"
            android:textStyle="bold"
            android:background="@drawable/bg_choose_this_hotel"
            android:text="@string/log_out"
            android:id="@+id/btn_logOut"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>